--- a/src/partials/quote.html
+++ b/src/partials/quote.html
@@ -23,10 +23,7 @@
         <div class="quote-header">
           <h3 class="quote-title">Quote of the day</h3>
           <svg class="quote-inverted-commas-svg" width="20" height="20">
-            <use
-              class="inverted-commas-svg"
-              href="/images/icons.svg#commas"
-            ></use>
+            <use class="inverted-commas-svg" href="/img/icons.svg#commas"></use>
           </svg>
         </div>
 
@@ -43,14 +40,14 @@
         height="250"
         sizes="(min-width: 1440px) 736px, (min-width: 768px) 704px, 335px"
         srcset="
-          ./images/exercises/quote-girl-mobile-1x.webp   335w,
-          ./images/exercises/quote-girl-mobile-2x.webp   670w,
-          ./images/exercises/quote-girl-tablet-1x.webp   704w,
-          ./images/exercises/quote-girl-tablet-2x.webp  1472w,
-          ./images/exercises/quote-girl-desktop-1x.webp  736w,
-          ./images/exercises/quote-girl-desktop-2x.webp 1408w
+          ./img/exercises/quote-girl-mobile-1x.webp   335w,
+          ./img/exercises/quote-girl-mobile-2x.webp   670w,
+          ./img/exercises/quote-girl-tablet-1x.webp   704w,
+          ./img/exercises/quote-girl-tablet-2x.webp  1472w,
+          ./img/exercises/quote-girl-desktop-1x.webp  736w,
+          ./img/exercises/quote-girl-desktop-2x.webp 1408w
         "
-        src="./images/exercises/quote-girl-mobile-1x.webp"
+        src="./img/exercises/quote-girl-mobile-1x.webp"
         alt="two girls"
       />
     </div>
@@ -59,10 +56,7 @@
       <div class="min-line">
         <div class="min-icon-wrap">
           <svg class="min-icon" width="20" height="20">
-            <use
-              class="dumbbell-icon"
-              href="/images/icons.svg#dumbbell"
-            ></use>
+            <use class="dumbbell-icon" href="/img/icons.svg#dumbbell"></use>
           </svg>
         </div>
         <div class="min-info">
