--- a/src/css/container.css
+++ b/src/css/container.css
@@ -1,19 +1,22 @@
 /* Styles for Mobile devices */
 .container {
-    width: 100%;
-    max-width: calc(var(--container-max-width) + var(--main-padding) * 2);
+  max-width: 375px;
   margin: 0 auto;
-  padding: 0 16px;
+  padding: 0 20px;
 }
+
 /* Styles for Tablet devices */
 @media only screen and (min-width: 768px) {
   .container {
     max-width: 768px;
+    padding: 0 32px;
   }
 }
+
 /* Styles for Desktop devices */
-@media only screen and (min-width: 1200px) {
+@media only screen and (min-width: 1440px) {
   .container {
     max-width: 1440px;
   }
 }
+
