--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -2,7 +2,7 @@
   <div class="header-container">
     <a class="nav-logo" href="./index.html" aria-label="Site logo">
         <svg class="nav-logo-icon" width="132" height="24">
-          <use href="/images/icons.svg#your-energy"></use>
+          <use href="/img/icons.svg#your-energy"></use>
         </svg>
     </a>
 
@@ -21,21 +21,21 @@
       <li class="li-header">
         <a class="icon-media" href="https://www.facebook.com/goITclub/" aria-label="facebook" target="_blank">
           <svg class="" width="30" height="30">
-            <use href="/images/icons.svg#facebook"></use>
+            <use href="/img/icons.svg#facebook"></use>
           </svg>
         </a>
       </li>
       <li class="li-header">
         <a class="icon-media" href="https://www.instagram.com/goitclub/" aria-label="instagram" target="_blank">
           <svg class="" width="30" height="30" >
-            <use href="/images/icons.svg#insta"></use>
+            <use href="/img/icons.svg#insta"></use>
           </svg>
         </a>
       </li>
       <li class="li-header">
         <a class="icon-media" href="https://www.youtube.com/c/GoIT" aria-label="youtube" target="_blank">
           <svg class="" width="30" height="30">
-            <use href="/images/icons.svg#youtube"></use>
+            <use href="/img/icons.svg#youtube"></use>
           </svg>
         </a>
       </li>
@@ -50,7 +50,7 @@
         aria-label="mobile menu open icon"
         stroke="black"
       >
-        <use href="/images/icons.svg#burger"></use>
+        <use href="/img/icons.svg#burger"></use>
       </svg>
     </button>
   </div>
