--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,7 +1,7 @@
 <section class="hero container">
   <h1 class="hero-title">
     <svg width="59" height="59">
-      <use href="/images/icons.svg#icon-30"></use>
+      <use href="/img/icons.svg#icon-30"></use>
     </svg>
     <span class="line1">Get <i>Body</i> in</span><br />
     <span class="line2">shape, Stay healthy</span>
@@ -12,8 +12,8 @@
   </p>
   <div class="hero-main-image">
     <img
-    srcset="./images/hero/hero.webp 1x, ./images/hero/hero-2x.webp 2x"
-    src="./images/hero/hero.webp"
+    srcset="./img/hero/hero.webp 1x, ./img/hero/hero-2x.webp 2x"
+    src="./img/hero/hero.webp"
     alt="women-sportswear-working-out-outdoors"
     width="335" 
     height="400"
@@ -28,8 +28,8 @@
   </div>
   <div class="hero-secondary-image">
     <img
-      srcset="./images/hero/icon-img.png 1x, ./images/hero/icon-img-2x.png 2x"
-      src="./images/hero/icon-img.png"
+      srcset="./img/hero/icon-img.png 1x, ./img/hero/icon-img-2x.png 2x"
+      src="./img/hero/icon-img.png"
       alt="young-women-doing-fitness-outdoors-together"
       width="168"
       height="100"
