--- a/src/partials/mobile-menu.html
+++ b/src/partials/mobile-menu.html
@@ -7,7 +7,7 @@
             aria-label="mobile menu close icon"
             width="32"
             height="32">
-            <use href="./images/icons.svg#cross"></use>
+            <use href="./img/icons.svg#cross"></use>
         </svg>  
       </button>
     </div>
@@ -38,21 +38,21 @@
       <li class="li">
         <a class="footer-icon-media" href="https://www.facebook.com/goITclub/" aria-label="facebook" target="_blank">
           <svg class="" width="30" height="30">
-            <use href="/images/icons.svg#facebook"></use>
+            <use href="/img/icons.svg#facebook"></use>
           </svg>
         </a>
       </li>
       <li class="li">
         <a class="footer-icon-media" href="https://www.instagram.com/goitclub/" aria-label="instagram" target="_blank">
           <svg class="" width="30" height="30">
-            <use href="/images/icons.svg#insta"></use>
+            <use href="/img/icons.svg#insta"></use>
           </svg>
         </a>
       </li>
       <li class="li">
         <a class="footer-icon-media" href="https://www.youtube.com/c/GoIT" aria-label="youtube" target="_blank">
           <svg class="" width="30" height="30">
-            <use href="/images/icons.svg#youtube"></use>
+            <use href="/img/icons.svg#youtube"></use>
           </svg>
         </a>
       </li>
