--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,12 +1,14 @@
 <footer class="footer-section">
-  <div class="footer-container ">
+  <div class="footer-container">
+    
     <div class="footer-main-wrapper">
+      
       <div class="footer-first-half-wrapper">
-          <a class="footer-logo" href="./index.html" aria-label="Site logo">
-            <svg class="footer-logo-icon" width="132" height="24">
-              <use href="/img/icons.svg#your-energy"></use>
-            </svg>
-          </a>
+        <a class="footer-logo" href="./index.html" aria-label="Site logo">
+          <svg class="footer-logo-icon" width="132" height="24">
+            <use href="/img/icons.svg#your-energy"></use>
+          </svg>
+        </a>
 
         <ul class="footer-list">
           <li class="li">
@@ -15,32 +17,37 @@
               href="https://www.facebook.com/goITclub/"
               aria-label="facebook"
               target="_blank"
+              rel="noopener noreferrer"
             >
-              <svg class="" width="30" height="30">
+              <svg width="30" height="30">
                 <use href="/img/icons.svg#facebook"></use>
               </svg>
             </a>
           </li>
+
           <li class="li">
             <a
               class="footer-icon-media"
               href="https://www.instagram.com/goitclub/"
               aria-label="instagram"
               target="_blank"
+              rel="noopener noreferrer"
             >
-              <svg class="" width="30" height="30">
+              <svg width="30" height="30">
                 <use href="/img/icons.svg#insta"></use>
               </svg>
             </a>
           </li>
+
           <li class="li">
             <a
               class="footer-icon-media"
               href="https://www.youtube.com/c/GoIT"
               aria-label="youtube"
               target="_blank"
+              rel="noopener noreferrer"
             >
-              <svg class="" width="30" height="30">
+              <svg width="30" height="30">
                 <use href="/img/icons.svg#youtube"></use>
               </svg>
             </a>
@@ -50,13 +57,16 @@
 
       <div class="footer-second-half-wrapper">
         <p class="footer-text">
-          Transforming your <span class="footer-text-accent">body</span> shape
-          with us
+          Transforming your 
+          <span class="footer-text-accent">body</span> 
+          shape with us
         </p>
+
         <div class="form-container">
           <p class="footer-form-text">
             Subscribe and learn about new exercises!
           </p>
+
           <form class="subs-form">
             <input
               type="email"
@@ -65,22 +75,36 @@
               required
               class="subs-input"
             />
-            <button class="footer-form-btn" type="submit">Send</button>
+            <button class="footer-form-btn" type="submit">
+              Send
+            </button>
           </form>
         </div>
       </div>
-    </div>
+
+    </div> 
 
     <div class="copywrite-wrapper">
-  <p class="copywrite-text">Your Energy. All rights reserved.</p>
-  
-  <div class="copywrite-bottom-row">
-    <div class="copywrite-links">
-      <a href="#" target="_blank">Privacy Policy</a>
-      <span>/</span>
-      <a href="#" target="_blank">Terms of Service</a>
+      <p class="copywrite-text">
+        Your Energy. All rights reserved.
+      </p>
+
+      <div class="copywrite-bottom-row">
+        <div class="copywrite-links">
+          <a href="#" target="_blank" rel="noopener noreferrer">
+            Privacy Policy
+          </a>
+          <span>/</span>
+          <a href="#" target="_blank" rel="noopener noreferrer">
+            Terms of Service
+          </a>
+        </div>
+
+        <p class="copywrite-text">©2023</p>
+      </div>
     </div>
-    <p class="copywrite-text">©2023</p>
-  </div>
-</div>
+
+  </div> 
+
 </footer>
+
